--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: CI
+
 on: 
   pull_request:
     branches:
@@ -9,19 +10,21 @@ on:
 
 jobs:
   build:
+    name: Build on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.8]
+        python-version: [3.9]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip' # caching pip dependencies
 
     - name: Install dependencies
       run: |
@@ -34,10 +37,10 @@ jobs:
 
     - name: Compile with PyInstaller
       run: |
-        pyinstaller --onefile main.py
+        pyinstaller --onefile --windowed main.py
 
     - name: Upload executable
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v4
       with:
-        name: main-${{ matrix.os }}
-        path: dist/main${{ runner.os == 'Windows' && '.exe' || '' }}
+        name: main-${{ matrix.os }}-${{ matrix.python-version }}
+        path: dist/*
